# airoh

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements_dev.txt  tasks.py
.github/workflows/: docs.yml  publish.yml
airoh/: acquisition.py  containers.py  datalad.py  utils.py
tests/: test_acquisition.py  test_utils.py
