[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "airoh"
version = "0.3.2"
description = "A lightweight task library for reproducible workflows"
authors = [{ name = "Lune Bellec", email = "lune.bellec@umontreal.ca" }]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["invoke>=2.0"]

[project.optional-dependencies]
datalad = ["datalad>=0.18"]
full = ["datalad>=0.18"]

[project.urls]
Homepage = "https://github.com/airoh-pipeline/airoh"
Issues = "https://github.com/airoh-pipeline/airoh/issues"

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["I"]  # E = pycodestyle, F = pyflakes, I = isort

[tool.hatch.envs.dev]
dependencies = [
"invoke>=2.0",
"ruff>=0.1.0",
"pytest>=7.0"
]
